# agentic-conversation-bot

./: .gitignore  README.md  __init__.py  bot.ipynb  bot.py  main.py  pyproject.toml  storage.py  test.ipynb  test2.ipynb
.github/workflows/: codeql.yml
agents/: VideoTopicBuffer.py  agent_processor.py  agent_service.py  bot.py  main.py  receiver.py  storage.py  text_writer.py
agents/communications/: receiver.py
agents/graph/: nodes.py  state.py  workflow.py
agents/tools/: basic_tools.py
audio_processor/: audio_handler.py  config.py  main.py  transcription_manager.py  voice_assistant.py  wake_word_detector.py
audio_processor/agents/: main.py
audio_processor/communication_bus/: inmemory_bus.py
communication_bus/: inmemory_bus.py
conversation_bot/: storage.py
face_animation/: face.html
live_interaction/: face.html  ui_service.py
stt_audio_processor/: audio_handler.py  audio_processor.py  config.py  conversation_manager.py  logger.py  openai_transcription.py  stt_processor.py  transcription_manager.py  voice_assistant.py  wake_word_detector.py
test_codes/: test.ipynb  test2.ipynb  test3.ipynb
tts_audio_processor/: audio_player.py  text_reader.py  text_to_speech.py  tts_processor.py  tts_service.py
